# gha-github-mirror-action

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  action.yaml  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: delete_branch_pr_tag.sh
.github/workflows/: bump-and-release.yaml  codeql.yaml  integration.yaml  mirror-all.yaml  test-action.yml  test.yaml  test.yml
config/: repos.yaml
scripts/: clone-local.sh  mirror.sh
tests/unit/: test_clone_local.bats  test_infra_files.bats  test_mirror.bats
